objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>Payor_Type__c</fullName>
        <label>Payor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Payors</fullName>
                </value>
                <value>
                    <fullName>Medicare Only</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceBook_Legacy_ID__c</fullName>
        <label>PriceBook Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Category__c</fullName>
        <label>Pricing Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Case</fullName>
                </value>
                <value>
                    <fullName>Per Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vol_Monthly_Mins__c</fullName>
        <label>Vol. Monthly Mins</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Price_Books</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Price Books</label>
    </listViews>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>